src/styles/_custom.scss
.container {padding:0}

label {
	font-size: $font-size-large
}

@mixin no-select {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

[unselectable="on"] {
	@include no-select();
}

[ng-app] .modal {display: block;}

[pi-quest] {
	position: relative;

	// copied from container
	@media (min-width: $screen-sm-min) {
		width: $container-sm;
	}
	@media (min-width: $screen-md-min) {
		width: $container-md;
	}
	@media (min-width: $screen-lg-min) {
		width: $container-lg;
	}
}

[piq-page]{
	position: relative;
	width: 100%;
	overflow: hidden;
}

[pi-quest-validation]{

	margin: 10px 0;

	.glyphicon {
		margin-right: 5px;
	}
}

[pi-console] {
	margin: 20px 0px;

	.pre a{
		white-space: pre;
		text-decoration:none
	}

	.alert span {
		margin-right:5px;
	}


}

// ripped off regular buttons and group-list-item for conformity with the list style
.btn-select {
	background-color: #fff;
	border-color: #ccc;
	color: #333;

	&:focus {color: #fff;}

	&:hover
	{
		color: #555;
		background-color: #f5f5f5;
		text-decoration: none;
	}

	&:active,
	&.active
	{
		color: #fff;
		background-color: #337ab7;
		border-color: #337ab7;
	}
}

.btn-active-accented.active{
	color:black;
}

[quest-grid]{
	table {
		table-layout: fixed;
	}

	thead th, td {
		text-align:center;
	}

	&.pi-page-submitted tr.ng-invalid-required {
		background-color: #f2dede;
	}

	.text {
		margin: 1px; // same as the button border
		padding: $padding-base-vertical $padding-base-horizontal;
		line-height: $line-height-base;
	}

	.btn:before {
		@extend .glyphicon;
		@extend .glyphicon-ok;
		visibility: hidden;
	}


	.colorMark.btn.active{


			&:before{
				visibility: hidden
			}

			background-color: #337ab7;
			border-color: #337ab7;
			color: #fff;

	}

	.xMark.btn:before {
		@extend .glyphicon-remove;
	}

	.btn.active:before {
		visibility: visible;
	}
}

